# j

./: CMakeLists.txt  README.md  j  j.js  j.sh  test.js
generators/: ninja.js
src/: Generator.h  J.h  NinjaGenerator.h  main.cpp
test/: foo.cpp  jtest.cpp  lib.cpp  lib.h  main.cpp  test.js
