cmake_minimum_required(VERSION 2.8)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/rct/)
include_directories(${CMAKE_CURRENT_LIST_DIR})
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/rct/src/ ${CMAKE_CURRENT_SOURCE_DIR}/rct/include)
add_definitions(-DJ_ROOT="${CMAKE_CURRENT_SOURCE_DIR}")
add_executable(j src/main.cpp)
add_dependencies(j rct)
target_link_libraries(j ${CMAKE_CURRENT_SOURCE_DIR}/rct/librct.a -lpthread -lrt)
