cmake_minimum_required(VERSION 2.8)
if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/rct/CMakeLists.txt)
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/rct/)
else()
    message(ERROR "You need to call:\n# git clone git@github.com:Andersbakken/rct.git")
endif()
include_directories(${CMAKE_CURRENT_LIST_DIR})
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/rct/src/ ${CMAKE_CURRENT_SOURCE_DIR}/rct/include)
add_definitions(-DJ_ROOT="${CMAKE_CURRENT_SOURCE_DIR}")
add_executable(j src/main.cpp)
add_dependencies(j rct)

if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
  set(JLIBS -lpthread -lrt -ldl)
endif()
target_link_libraries(j ${CMAKE_CURRENT_SOURCE_DIR}/rct/librct.a ${JLIBS})
